--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
     {% block content1 %} {% endblock content1%}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="undefined" crossorigin="anonymous"></script>
-    <script src="//cdn.ckeditor.com/4.16.1/standard/ckeditor.js"></script>>
+    <script src="//cdn.ckeditor.com/4.16.1/standard/ckeditor.js"></script>
     <script type="text/javascript">CKEDITOR.replace('editor')</script>
 </body>
 </html>
